Vision slight refactoring
tests now runnable with EOCVsim